--- a/src/app/livestock/livestock-form/livestock-form.html
+++ b/src/app/livestock/livestock-form/livestock-form.html
@@ -98,7 +98,7 @@
 
         <!-- Row 3: Farmer, Livestock Group -->
         <div class="form-row">
-          <mat-form-field appearance="outline" class="half-width">
+          <!-- <mat-form-field appearance="outline" class="half-width">
             <mat-label>Farmer</mat-label>
             <mat-select formControlName="farmer">
               <mat-option *ngFor="let f of farmers" [value]="f.id">
@@ -108,7 +108,7 @@
             <mat-error *ngIf="farmer.hasError('required')">
               Farmer is required.
             </mat-error>
-          </mat-form-field>
+          </mat-form-field> -->
 
           <mat-form-field appearance="outline" class="half-width">
             <mat-label>Livestock Group</mat-label>
