--- a/src/app/livestock-group/livestock-group-list/livestock-group-list.html
+++ b/src/app/livestock-group/livestock-group-list/livestock-group-list.html
@@ -1,57 +1,26 @@
-<div class="users-container">
-  <div class="users-header">
-    <h2>Livestock Groups</h2>
-    <button mat-raised-button color="primary" (click)="onCreate()" *ngIf="user?.role === 'farmer'">
-      <mat-icon>add</mat-icon> Create Livestock
+<app-generic-table
+  [title]="'Livestock Groups'"
+  [createButtonLabel]="'Create Livestock'"
+  (create)="onCreate()"
+  [displayedColumns]="displayedColumns"
+  [columnDefs]="columnDefs"
+  [dataSource]="dataSource" 
+  [isLoading]="isLoading"
+  (details)="onDetails($event)"
+  (update)="onUpdate($event)"
+>
+  <ng-template #actions let-element>
+    <button mat-icon-button color="accent" (click)="onDetails(element._id!)">
+      <mat-icon>visibility</mat-icon>
     </button>
-  </div>
-
-  <div *ngIf="isLoading; else tableTemplate" class="loading-container">
-    <mat-spinner diameter="40"></mat-spinner>
-    <p>Fetching data...</p>
-  </div>
-
-  <ng-template #tableTemplate>
-    <table mat-table [dataSource]="livestockGroups" class="mat-elevation-z2 user-table">
-
-      <!-- Group Name -->
-      <ng-container matColumnDef="groupName">
-        <th mat-header-cell *matHeaderCellDef> Group Name </th>
-        <td mat-cell *matCellDef="let livestockGroup"> {{ livestockGroup.groupName }} </td>
-      </ng-container>
-
-      <!-- Farmer -->
-      <ng-container matColumnDef="farmer">
-        <th mat-header-cell *matHeaderCellDef> Farmer </th>
-        <td mat-cell *matCellDef="let livestockGroup"> {{ livestockGroup.farmer.firstName }} {{ livestockGroup.farmer.lastName }} </td>
-      </ng-container>
-
-      <!-- Status -->
-      <ng-container matColumnDef="status">
-        <th mat-header-cell *matHeaderCellDef> Status </th>
-        <td mat-cell *matCellDef="let livestockGroup"> {{ livestockGroup.status }} </td>
-      </ng-container>
-
-      <!-- Action -->
-      <ng-container matColumnDef="action">
-        <th mat-header-cell *matHeaderCellDef> Action </th>
-        <td mat-cell *matCellDef="let livestockGroup">
-          <button mat-icon-button color="accent" (click)="onDetails(livestockGroup._id!)">
-            <mat-icon>visibility</mat-icon>
-          </button>
-
-          <button mat-icon-button
-                  color="primary" 
-                  (click)="onUpdate(livestockGroup._id!)"
-                  *ngIf="user?.role === 'farmer'"
-                  [disabled]="livestockGroup.status === 'pending' || livestockGroup.status==='approved'">
-            <mat-icon>edit</mat-icon>
-          </button>
-        </td>
-      </ng-container>
-
-      <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-      <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
-    </table>
+    <button
+      mat-icon-button
+      color="primary"
+      (click)="onUpdate(element._id!)"
+      *ngIf="user?.role === 'farmer'"
+      [disabled]="element.status === 'pending' || element.status === 'approved'"
+    >
+      <mat-icon>edit</mat-icon>
+    </button>
   </ng-template>
-</div>
+</app-generic-table>
