--- a/src/app/livestock/livestock-list/livestock-list.html
+++ b/src/app/livestock/livestock-list/livestock-list.html
@@ -1,79 +1,12 @@
-<div class="users-container">
-  <div class="users-header">
-    <h2>Livestocks</h2>
-    <!-- to hide -->
-     <!-- *ngIf="user?.role === 'farmer'"-->
-    <button mat-raised-button color="primary" (click)="onCreate()" *ngIf="user?.role === 'farmer'"> 
-      <mat-icon>add</mat-icon> Create Livestock
-    </button>
-  </div>
-
-  <div *ngIf="isLoading; else tableTemplate" class="loading-container">
-    <mat-spinner diameter="40"></mat-spinner>
-    <p>Fetching data...</p>
-  </div>
-
-  <ng-template #tableTemplate>
-    <table mat-table [dataSource]="livestocks" class="mat-elevation-z2 user-table">
-
-      <!-- Tag Number -->
-      <ng-container matColumnDef="tagNumber">
-        <th mat-header-cell *matHeaderCellDef> Tag Number </th>
-        <td mat-cell *matCellDef="let livestock"> {{ livestock.tagNumber }} </td>
-      </ng-container>
-
-      <!-- Species -->
-      <ng-container matColumnDef="species">
-        <th mat-header-cell *matHeaderCellDef> Species </th>
-        <td mat-cell *matCellDef="let livestock">
-          {{ livestock.species?.name }}
-        </td>
-      </ng-container>
-
-      <!-- Breed -->
-      <ng-container matColumnDef="breed">
-        <th mat-header-cell *matHeaderCellDef> Breed </th>
-        <td mat-cell *matCellDef="let livestock"> {{ livestock.breed.name }} </td>
-      </ng-container>
-
-      <!-- Sex -->
-      <ng-container matColumnDef="sex">
-        <th mat-header-cell *matHeaderCellDef> Sex </th>
-        <td mat-cell *matCellDef="let livestock"> {{ livestock.sex }} </td>
-      </ng-container>
-
-      <!-- Age -->
-      <ng-container matColumnDef="age">
-        <th mat-header-cell *matHeaderCellDef> Age </th>
-        <td mat-cell *matCellDef="let livestock"> {{ livestock.age }} </td>
-      </ng-container>
-
-      <!-- Status -->
-      <ng-container matColumnDef="status">
-        <th mat-header-cell *matHeaderCellDef> Status </th>
-        <td mat-cell *matCellDef="let livestock"> {{ livestock.status }} </td>
-      </ng-container>
-
-      <!-- Action -->
-      <ng-container matColumnDef="action">
-        <th mat-header-cell *matHeaderCellDef> Action </th>
-        <td mat-cell *matCellDef="let livestock">
-          <button mat-icon-button color="accent" (click)="onDetails(livestock._id!)">
-            <mat-icon>visibility</mat-icon>
-          </button>
-          <!-- remove ng-if, if the admin is able to create -->
-          <button mat-icon-button color="primary" 
-            (click)="onUpdate(livestock._id!)"
-            *ngIf="user?.role === 'farmer'"
-            [disabled]="livestock.status === 'pending' || livestock.status==='approved'"
-          >
-            <mat-icon>edit</mat-icon>
-          </button>
-        </td>
-      </ng-container>
-
-      <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-      <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
-    </table>
-  </ng-template>
-</div>
+<app-generic-table
+  [title]="'Livestocks'"
+  [createButtonLabel]="'Create Livestock'"
+  [displayedColumns]="displayedColumnsKeys"
+  [columnDefs]="columnDefs"
+  [dataSource]="dataSource"
+  [isLoading]="isLoading"
+  (create)="onCreate()"
+  (details)="onDetails($event)"
+  (update)="onUpdate($event)"
+>
+</app-generic-table>
