--- a/src/app/user/user-list/user-list.html
+++ b/src/app/user/user-list/user-list.html
@@ -1,72 +1,11 @@
-<div class="users-container">
-  <div class="users-header">
-    <h2>Users</h2>
-    <button mat-raised-button color="primary" (click)="onCreate()">
-      <mat-icon>add</mat-icon> Create User
-    </button>
-  </div>
-
-  @if (isLoading) {
-    <div class="loading-container">
-      <mat-spinner diameter="40"></mat-spinner>
-      <p>Fetching data...</p>
-    </div>
-  } @else {
-    <table mat-table [dataSource]="users" class="mat-elevation-z2 user-table">
-
-      <!-- Username -->
-      <ng-container matColumnDef="username">
-        <th mat-header-cell *matHeaderCellDef> Username </th>
-        <td mat-cell *matCellDef="let user"> {{ user.username }} </td>
-      </ng-container>
-
-      <!-- Email -->
-      <ng-container matColumnDef="email">
-        <th mat-header-cell *matHeaderCellDef> Email </th>
-        <td mat-cell *matCellDef="let user"> {{ user.emailAddress }} </td>
-      </ng-container>
-
-      <!-- Mobile Number -->
-      <ng-container matColumnDef="mobileNumber">
-        <th mat-header-cell *matHeaderCellDef> Mobile </th>
-        <td mat-cell *matCellDef="let user"> {{ user.mobileNumber }} </td>
-      </ng-container>
-
-      <!-- Address -->
-      <ng-container matColumnDef="address">
-        <th mat-header-cell *matHeaderCellDef> Address </th>
-        <td mat-cell *matCellDef="let user">
-          {{ user.address.municipality }}, {{ user.address.barangay }}
-        </td>
-      </ng-container>
-
-      <!-- Gender -->
-      <ng-container matColumnDef="gender">
-        <th mat-header-cell *matHeaderCellDef> Gender </th>
-        <td mat-cell *matCellDef="let user"> {{ user.gender }} </td>
-      </ng-container>
-
-      <!-- Role -->
-      <ng-container matColumnDef="role">
-        <th mat-header-cell *matHeaderCellDef> Role </th>
-        <td mat-cell *matCellDef="let user"> {{ user.role }} </td>
-      </ng-container>
-
-      <!-- Action -->
-      <ng-container matColumnDef="action">
-        <th mat-header-cell *matHeaderCellDef> Action </th>
-        <td mat-cell *matCellDef="let user">
-          <button mat-icon-button color="accent" (click)="onDetails(user._id!)">
-            <mat-icon>visibility</mat-icon>
-          </button>
-          <button mat-icon-button color="primary" (click)="onUpdate(user._id!)">
-            <mat-icon>edit</mat-icon>
-          </button>
-        </td>
-      </ng-container>
-
-      <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-      <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
-    </table>
-  }
-</div>
+<app-generic-table
+  [title]="'Users'"
+  [createButtonLabel]="'Create User'"
+  [displayedColumns]="displayedColumns"
+  [columnDefs]="columnDefs"
+  [dataSource]="dataSource"
+  [isLoading]="isLoading"
+  (create)="onCreate()"
+  (details)="onDetails($event)"
+  (update)="onUpdate($event)">
+</app-generic-table>
