--- a/src/app/_shared/component/table/generic-table.component.html
+++ b/src/app/_shared/component/table/generic-table.component.html
@@ -1,9 +1,13 @@
 <div class="page-container">
 
   @if (createButtonLabel && create) {
-    <div class="actions">
-      <!-- [routerLink]="createButtonLink" -->
-      <button mat-raised-button color="primary" (click)="onCreateClick()">
+    <div class="actions" *ngIf="createButtonLabel">
+      <button
+        mat-raised-button
+        color="primary"
+        (click)="onCreateClick()"
+        [disabled]="isCreateDisabled()"
+      >
         {{ createButtonLabel }}
       </button>
     </div>
@@ -43,20 +47,21 @@
       <ng-container matColumnDef="actions">
         <th mat-header-cell *matHeaderCellDef> Actions </th>
         <td mat-cell *matCellDef="let element">
-          <button mat-icon-button  color="primary" (click)="onDetailsClick(element)">
-            <mat-icon>visibility</mat-icon>
-          </button>
-          @if (update.observers.length > 0) {
+          <ng-container *ngIf="actionsTemplate; else defaultActions">
+            <ng-container *ngTemplateOutlet="actionsTemplate; context: { $implicit: element }"></ng-container>
+          </ng-container>
+
+          <ng-template #defaultActions>
+            <button mat-icon-button color="primary" (click)="onDetailsClick(element)">
+              <mat-icon>visibility</mat-icon>
+            </button>
             <button mat-icon-button color="accent" (click)="onUpdateClick(element)">
               <mat-icon>edit</mat-icon>
             </button>
-          }
-
-          @if (markAsRead.observers.length > 0) {
-            <button mat-icon-button color="accent" (click)="onMarkAsReadClick(element)">
+            <!-- <button mat-icon-button color="accent" (click)="onMarkAsReadClick(element)">
               <mat-icon>done_all</mat-icon>
-            </button>
-          }
+            </button> -->
+          </ng-template>
         </td>
       </ng-container>
 
