--- a/src/app/livestock-group/livestock-group-list/livestock-group-list.html
+++ b/src/app/livestock-group/livestock-group-list/livestock-group-list.html
@@ -1,6 +1,7 @@
 <app-generic-table
   [title]="'Livestock Groups'"
   [createButtonLabel]="'Create Livestock'"
+  [canCreate]="canCreate"
   (create)="onCreate()"
   [displayedColumns]="displayedColumns"
   [columnDefs]="columnDefs"
