renamed login title

--- a/src/app/login/login.html
+++ b/src/app/login/login.html
@@ -1,6 +1,6 @@
 <div class="login-container">
   <div class="login-card">
-    <h2>Livestock Health Monitoring - Admin Panel</h2>
+    <h2>Livestock Health Monitoring</h2>
     <form [formGroup]="rxform" (ngSubmit)="onSubmit()">
       <div class="form-group">
         <label for="username">Username</label>
